丰富侧滑菜单内容+点击事件

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -5,15 +5,15 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/sk1"
             android:icon="@drawable/nav2"
             android:title="出行" />
         <item
-            android:id="@+id/nav_home1"
+            android:id="@+id/sk2"
             android:icon="@drawable/nav3"
             android:title="资讯" />
         <item
-            android:id="@+id/nav_home2"
+            android:id="@+id/sk3"
             android:icon="@drawable/nav4"
             android:title="个人" />
     </group>
@@ -21,11 +21,11 @@
     <item android:title="其它">
         <menu>
             <item
-                android:id="@+id/nav_home4"
+                android:id="@+id/sk4"
                 android:icon="@drawable/nav3"
                 android:title="分享" />
             <item
-                android:id="@+id/nav_home5"
+                android:id="@+id/sk5"
                 android:icon="@drawable/nav4"
                 android:title="退出" />
         </menu>
