--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
 
 
         <com.google.android.material.navigation.NavigationView
-            android:id="@+id/nav_view"
+            android:id="@+id/nNavigationView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
