--- a/app/src/main/res/layout/compent_user_list.xml
+++ b/app/src/main/res/layout/compent_user_list.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="#ff4f02"
     android:orientation="horizontal"
     android:gravity="center_vertical"
     android:layout_height="wrap_content">
@@ -13,7 +14,7 @@
         android:layout_marginRight="5dp"
         />
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:id="@+id/textk"
         android:layout_weight="1"
         android:gravity="center_vertical"
