--- a/app/src/main/res/layout/activity_startup_page.xml
+++ b/app/src/main/res/layout/activity_startup_page.xml
@@ -1,11 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
-    android:paddingBottom="0dp"
-    android:background="@drawable/startup"
-    tools:context=".StartupPage">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="#000"
+tools:context=".StartupPage">
+<RelativeLayout
+    android:layout_width="match_parent"
+
+    android:layout_height="match_parent">
+
+
+    <ImageView
+        android:id="@+id/imgA"
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:background="@drawable/startup_light"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+
+    <ImageView
+        android:id="@+id/imgB"
+        android:layout_width="0.1dp"
+        android:layout_height="0.1dp"
+        android:background="@drawable/startup_text"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+
+    <ImageView
+        android:id="@+id/imgC"
+        android:layout_width="0.1dp"
+        android:layout_height="0.1dp"
+        android:background="@drawable/startup_ring"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+
+    <ImageView
+        android:id="@+id/imgC_1"
+        android:layout_width="0.1dp"
+        android:layout_height="0.1dp"
+        android:background="@drawable/startup_ring"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+    <ImageView
+        android:id="@+id/imgC_2"
+        android:layout_width="0.1dp"
+        android:layout_height="0.1dp"
+        android:background="@drawable/startup_ring"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+    <ImageView
+        android:id="@+id/imgD"
+        android:onClick="gotoActive"
+        android:layout_width="0.1dp"
+        android:layout_height="0.1dp"
+        android:background="@drawable/startup_main"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+
+
+
 </RelativeLayout>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
